# M-trees

./: CMakeLists.txt  README.md  compile.sh  legacy.txt  mtree_plot.py  performance_analysis.py
headers/: cluster_utils.h  commons.h  minmax_split.h  mtree_funcs.h  mtree_struct.h  nearest_neighbour.h  nearest_pair.h
headers/cp/: bfs_utils.h  dfs_utils.h  sample_utils.h  simple_funcs.h
headers/general/: MSearch.h  cluster_utils.h  commons.h  experiment.h  mtree_funcs.h  mtree_struct.h
headers/ss/: minmax_split.h  nearest_neighbour.h  nearest_pair.h
src/: cluster_utils.cpp  minmax_split.cpp  mtree_struct.cpp  nearest_neighbour.cpp  nearest_pair.cpp  ss_method.cpp
src/cp/: bfs_utils.cpp  cp_method.cpp  cp_methodFA.cpp  dfs_utils.cpp  sample_utils.cpp  simple_funcs.cpp
src/general/: MSearch.cpp  cluster_utils.cpp  experiment.cpp  main.cpp  mtree_struct.cpp
src/ss/: minmax_split.cpp  nearest_neighbour.cpp  nearest_pair.cpp  ss_method.cpp
